--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "use-react-countries": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
