--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DB_EKY_OF_PCMASETER=SYzs0XSIoyp0Dpq
 DB_PCMASTER=PCMASTER
+serverlink=https://pcm-server.vercel.app/
+singlePcItem=https://pcm-server.vercel.app/pcItems/allproducts/
