--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.2",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "heroicons": "^2.0.18",
     "json-server": "^0.17.4",
     "mongodb": "^6.1.0",
